--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "fastclick": "^1.0.6",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-waterfall": "^1.0.6",
+    "vue2-waterfall": "^2.0.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
